--- a/index.html
+++ b/index.html
@@ -4,9 +4,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Document</title>
 </head>
 <body>
+        <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <div id="root"></div>
+                    </div>
+                </div>
+            </div>
     <script src="app.js"></script>
+
+    <div class="container">
+            <div class="row">
+                <div class="col">
+                    <div class="card">
+                        <div class="embed-responsive embed-responsive-16by9 card-img-top">
+                            <video class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" controls allowfullscreen></video>
+                        </div>
+                        <div class="card-body">
+                            <p>
+                                Some content
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <div class="card">
+                            <div class="embed-responsive embed-responsive-21by9 card-img-top">
+                                <audio class="embed-responsive-item"  src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" controls></audio>
+                            </div>
+                            <div class="card-body">
+                                <p>
+                                    Some content
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
 </body>
 </html>
